# Recurrent-Process-Microservice

./: .gitignore  Makefile  README.md  app.py  cdk.json  requirements.txt
cdk_infrastructure/: __init__.py
source/get_next_minute_and_invocation_times_lambda/: handler.py  pyproject.toml  scratch.py
source/get_next_minute_lambda/: handler.py  requirements.txt  scratch.py
source/update_database_lambda/: handler.py  pyproject.toml  requirements.txt
tests/unit/: test_cdk_workshop_stack.py
