[tool.poetry]
name = "get_next_minute_lambda"
version = "0.1.0"
description = ""
authors = ["Eugene"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
aws-lambda-powertools = "^1.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
