[tool.poetry]
name = "update_database_lambda"
version = "0.1.0"
description = ""
authors = ["Eugene"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.27.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
